--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
