--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "^3.4.3",
+    "react-youtube": "^7.13.1",
     "socket.io-client": "^2.3.1"
   },
   "scripts": {
